--- a/.github/workflows/xml-asset.yml
+++ b/.github/workflows/xml-asset.yml
@@ -38,9 +38,8 @@ jobs:
         -v $PWD/iris-ci-xml/ci/Runner.cls:/opt/ci/Runner.cls \
         -e PORT_CONFIGURATION_PROJECTNAME="forgery" \
         -e PORT_CONFIGURATION_LOGLEVEL=1 \
+        -e CI_XML_FLAGS="/exportversion=2016.2"         
         rfns/iris-ci:0.5.3
-    - name: Make IRIS artifact compatible with Caché
-      run: sed -i 's/generator\="IRIS"/generator\="Cache"/g' $PWD/app/forgery.xml
     - name: Retrieve the latest asset upload url
       id: release-asset-metadata
       run: |
